<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="myName"
            type="com.example.aboutme.MyName" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/layout_padding"
        android:paddingTop="@dimen/small_padding"
        android:paddingEnd="@dimen/layout_padding"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/name_text"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={myName.name}"
            android:textAlignment="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nickname_edit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nickname_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/what_is_your_nickname"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <Button
                android:id="@+id/done_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:onClick="addNickname"
                android:text="@string/done" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/nickname_text"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_200"
            android:onClick="updateNickname"
            android:paddingBottom="@dimen/small_padding"
            android:text="@={myName.nickname}"
            android:textAlignment="center"
            android:textSize="30sp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/avatar_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:contentDescription="@string/avatar_desc"
            app:srcCompat="@android:drawable/ic_menu_info_details"
            tools:srcCompat="@android:drawable/ic_menu_info_details" />

        <ScrollView
            android:id="@+id/bio_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/scrollable_image"
                    android:layout_width="match_parent"
                    android:layout_height="87dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/scrollable_image_desc"
                    app:srcCompat="@android:drawable/ic_menu_myplaces" />

                <TextView
                    android:id="@+id/bio_text"
                    style="@style/NameStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/bio"
                    android:textSize="20sp" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>